--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -62,7 +62,7 @@
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
 
-    --ion-color-body: #eef4f9;
+    --ion-color-body: #f3f3f3;
 }
 
 @font-face {
