--- a/src/app/pages/general/moc/moc.page.scss
+++ b/src/app/pages/general/moc/moc.page.scss
@@ -1,13 +1,22 @@
 ion-content {
     .main-container {
-        padding: 50px 0 0 15px;
+        padding: 25px 10px 0 10px;
 
         ion-skeleton-text {
             height: 16px;
         }
 
+        ion-card {
+            color: #000;
+
+            ion-card-content {
+                padding: 16px;
+            }
+            
+        }
+
         .pdf-file {
-            margin-top: 50px;
+            margin-top: 25px;
 
             a {
                 text-decoration: underline;
@@ -19,15 +28,5 @@ ion-content {
             }
         }
     }
-}
-
-pdf-viewer {
-    // display: block;
-    height: 200px;
-    width: 150px;
-}
-
-::ng-deep .pdfViewer .page .textLayer {
-    border: 1px solid;
 }
 
