--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -9,89 +9,93 @@
 <ion-content>
     <ion-progress-bar *ngIf="isFetching" type="indeterminate"></ion-progress-bar>
     <div class="main-container">
-        <ion-grid *ngIf="dot" class="ion-no-padding">
-            <ion-row>
-                <strong>{{ 'GDT.TAX_IDENTIFICATION' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.dotNumber }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.REGISTRATION_DATE' | translate }} :</strong>
-                <p class="ion-margin-start">{{ moment(dot.notedDate).format('DD-MM-YYYY') }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.REGISTRATION_AT' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.notedAtBranch }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.ADDRESS' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.address }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.BANK_NAME' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.bankName }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.BANK_ACC_NAME' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.bankAccountName }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.BANK_ACC_NUM' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.bankAccountNumber }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.TAX_CARD_NUM' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.taxationCardNumber }}</p>
-            </ion-row>
-            <ion-row>
-                <strong>{{ 'GDT.PHONE_NUMBER' | translate }} :</strong>
-                <p class="ion-margin-start">{{ dot.phoneNumber }}</p>
-            </ion-row>
-        </ion-grid>
+        <ion-card *ngIf="dot">
+            <ion-card-content>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.TAX_IDENTIFICATION' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.dotNumber }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.REGISTRATION_DATE' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ moment(dot.notedDate).format('DD-MM-YYYY') }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.REGISTRATION_AT' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.notedAtBranch }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.ADDRESS' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.address }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.BANK_NAME' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.bankName }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.BANK_ACC_NAME' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.bankAccountName }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.BANK_ACC_NUM' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.bankAccountNumber }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.TAX_CARD_NUM' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.taxationCardNumber }}</div>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.PHONE_NUMBER' | translate }} :</strong>
+                    <div class="ion-margin-start">{{ dot.phoneNumber }}</div>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
         <!-- loading -->
-        <ion-grid *ngIf="!dot" class="ion-no-padding">
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.TAX_IDENTIFICATION' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.REGISTRATION_DATE' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.REGISTRATION_AT' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.ADDRESS' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.BANK_NAME' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.BANK_ACC_NAME' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.BANK_ACC_NUM' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.TAX_CARD_NUM' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-            <ion-row class="ion-margin-top">
-                <strong>{{ 'GDT.PHONE_NUMBER' | translate }} :</strong>
-                <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
-            </ion-row>
-        </ion-grid>
+        <ion-card *ngIf="!dot">
+            <ion-card-content>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.TAX_IDENTIFICATION' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 35%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.REGISTRATION_DATE' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.REGISTRATION_AT' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.ADDRESS' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.BANK_NAME' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.BANK_ACC_NAME' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.BANK_ACC_NUM' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 40%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.TAX_CARD_NUM' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+                <ion-row class="ion-margin-top">
+                    <strong>{{ 'GDT.PHONE_NUMBER' | translate }} :</strong>
+                    <ion-skeleton-text class="ion-margin-start" animated style="width: 50%"></ion-skeleton-text>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
         <!-- PDF section  -->
         <div class="pdf-file">
             <strong>{{ 'DOC.DOWNLOAD_PDF' | translate }} :</strong>
             <div *ngIf="docs">
-                <ion-card class="doc-card">
-                    <ion-row *ngIf="docs.vat_certificate">
+                <ion-card *ngIf="docs.vat_certificate" class="doc-card">
+                    <ion-row>
                         <ion-col size="3">
                             <ion-icon (click)="onClickDownload(docs.vat_certificate, 'vat_certificate')" color="primary"
                                 class="pdf-icon" name="document-attach">
@@ -107,8 +111,8 @@
                         </ion-col>
                     </ion-row>
                 </ion-card>
-                <ion-card class="doc-card">
-                    <ion-row *ngIf="docs.patent">
+                <ion-card *ngIf="docs.patent" class="doc-card">
+                    <ion-row>
                         <ion-col size="3">
                             <ion-icon (click)="onClickDownload(docs.patent, 'patent')" color="primary" class="pdf-icon"
                                 name="document-attach">
@@ -124,8 +128,8 @@
                         </ion-col>
                     </ion-row>
                 </ion-card>
-                <ion-card class="doc-card">
-                    <ion-row *ngIf="docs.gdt_card">
+                <ion-card *ngIf="docs.gdt_card" class="doc-card">
+                    <ion-row>
                         <ion-col size="3">
                             <ion-icon (click)="onClickDownload(docs.gdt_card, 'gdt_card')" color="primary"
                                 class="pdf-icon" name="document-attach">
