--- a/src/app/pages/service-pricing/service-pricing.page.scss
+++ b/src/app/pages/service-pricing/service-pricing.page.scss
@@ -1,9 +1,13 @@
 ion-content {
     .main-container {
-        padding: 20px 15px 0 15px;
+        padding: 20px 0px 0 0px;
 
         ion-card {
             color: #000;
+
+            ion-card-content {
+                padding: 16px;
+            }
 
             ion-card-title {
                 font-size: 16px;
