--- a/src/app/pages/tax-calculation/general-tax/general-tax.page.html
+++ b/src/app/pages/tax-calculation/general-tax/general-tax.page.html
@@ -58,7 +58,7 @@
 							<ion-item>
 								<ion-col>
 									<ion-label color="light">{{ 'TAX_CALCULATION.INCOME_TAX_RELIEF' | translate }} ៖</ion-label>
-									<ion-label color="light">
+									<ion-label color="light" class="ion-text-center">
 										<strong>
 											{{calucationResults.incomeTax | number}} ៛
 										</strong>
@@ -68,7 +68,7 @@
 							<ion-item>
 								<ion-col>
 									<ion-label color="light">{{ 'TAX_CALCULATION.VAT_TO_BE_PAID' | translate }} ៖</ion-label>
-									<ion-label color="light">
+									<ion-label color="light" class="ion-text-center">
 										<strong>
 											{{calucationResults.valueAddedTax | number}} ៛
 										</strong>
@@ -78,7 +78,7 @@
 							<ion-item>
 								<ion-col>
 									<ion-label color="light">{{ 'TAX_CALCULATION.RENTAL_WITHHOLDING_TAX' | translate }} 10% ៖</ion-label>
-									<ion-label color="light">
+									<ion-label color="light" class="ion-text-center">
 										<strong>
 											{{calucationResults.rentingTax | number}} ៛
 										</strong>
@@ -88,7 +88,7 @@
 							<ion-item>
 								<ion-col>
 									<ion-label color="light">{{ 'TAX_CALCULATION.WITHHOLDING_TAX_ON_SERVICE' | translate }} 15% ៖</ion-label>
-									<ion-label color="light">
+									<ion-label color="light" class="ion-text-center">
 										<strong>
 											{{calucationResults.serviceTax | number}} ៛
 										</strong>
