--- a/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
+++ b/src/app/pages/tax-calculation/salary-tax/salary-tax.page.html
@@ -56,19 +56,37 @@
 				</div>
 				<div class="ion-margin-top">
 					<ion-row>
-						<ion-col class="ion-no-padding" size="12">
-							<ion-col class="ion-no-padding" size="7">
-								<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
-									<ion-label color="light">{{ 'TAX_CALCULATION.BTN_CALCULATE' | translate }}</ion-label>
-								</ion-button>
-							</ion-col>
+						<ion-col class="ion-no-padding ion-padding-end" size="5">
+							<ion-button fill="outline" class="w-100-p btn-calculation" (click)="resetForm()">
+								<ion-label>{{ 'TAX_CALCULATION.BTN_RESET' | translate }}</ion-label>
+							</ion-button>
+						</ion-col>
+						<ion-col class="ion-no-padding">
+							<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
+								<ion-label color="light">{{ 'TAX_CALCULATION.BTN_CALCULATE' | translate }}</ion-label>
+							</ion-button>
 						</ion-col>
 					</ion-row>
 				</div>
+
+				<!-- <div>
+					<ion-row>
+						<ion-col class="ion-no-padding ion-padding-end" size="5">
+							<ion-button type="reset" fill="outline" class="w-100-p btn-calculation" (click)="reset()">
+								<ion-label>{{ 'TAX_CALCULATION.BTN_RESET' | translate }}</ion-label>
+							</ion-button>
+						</ion-col>
+						<ion-col class="ion-no-padding" size="7">
+							<ion-button color="primary" type="submit" class="w-100-p btn-calculation" (click)="calculation()">
+								<ion-label color="light">{{ 'TAX_CALCULATION.BTN_CALCULATE' | translate }}</ion-label>
+							</ion-button>
+						</ion-col>
+					</ion-row>
+				</div> -->
 			</form>
 		</div>
 		<!-- Result of calculation -->
-		<div *ngIf="isShowingResults" class="ion-padding-horizontal">
+		<div *ngIf="isShowingResults && calucationResults" class="ion-padding-horizontal">
 			<div class="ion-text-center ion-margin-top">
 				<strong>{{ 'TAX_CALCULATION.RESULT' | translate }}</strong>
 			</div>
@@ -87,7 +105,7 @@
 								</ion-col>
 							</ion-item>
 							<ion-item>
-								<ion-col size="6">
+								<ion-col>
 									<ion-label color="light">{{ 'TAX_CALCULATION.BONUS_TAX' | translate }} ៖</ion-label>
 								</ion-col>
 								<ion-col>
