--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -11,7 +11,7 @@
     <div class="main-container">
         <ion-card *ngIf="dot">
             <ion-card-content>
-                <ion-row class="ion-margin-top">
+                <ion-row>
                     <strong>{{ 'GDT.TAX_IDENTIFICATION' | translate }} :</strong>
                     <div class="ion-margin-start">{{ dot.dotNumber }}</div>
                 </ion-row>
